# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  demo.cast  demo_json.cast  demo_plain.cast  demo_recursive.cast  demo_yaml.cast  pyproject.toml
.github/workflows/: ci.yml
gendiff/: __init__.py  core.py  diff_builder.py
gendiff/formatters/: json_formatter.py  stylish.py
gendiff/formatters/plain/: __init__.py  formatter.py
gendiff/scripts/: file_parser.py  gendiff.py  read_json_files.py
tests/: test_gendiff.py
